<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/heroimagea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-280dp"
                android:src="@drawable/loginbg1" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="end"
            >
        <ImageView
            android:id="@+id/heroimagea2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:layout_marginEnd="-20dp"
            android:src="@drawable/loginbg2" />
        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/heroimage"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/oedas" />
    </LinearLayout>







    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3">


        <TextView
            android:id="@+id/textView2"
            android:gravity="center"
            android:fontFamily="@font/dinproregular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mainscreentext"
            android:textColor="@color/dark" />


    </LinearLayout>




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cont">


        <Button
            android:id="@+id/primarybut"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/dinprobold"
            android:background="@drawable/primarybutton"
            android:stateListAnimator="@null"
            android:text="@string/giris"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/secondarybut"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/dinprobold"
            android:background="@drawable/secondarybutton"
            android:stateListAnimator="@null"
            android:text="@string/kayit"
            android:textColor="@color/MainBlue" />

    </LinearLayout>

    <TextView
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/dinprobold"
        android:text="@string/wgiris"
        android:textColor="@color/MainBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>