<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccentPinkLight"
    tools:context=".fragments.TabFragmentSocial">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/i_instagram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/instagram_active"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/i_instagramCopy"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            android:src="@drawable/instagram_active"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/i_facebook"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/facebook_passive"
            app:layout_constraintRight_toLeftOf="@id/i_instagram"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/i_snapchat"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/snapchat_passive"
            app:layout_constraintRight_toLeftOf="@id/i_facebook"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/i_twitter"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/twitter_passive"
            app:layout_constraintLeft_toRightOf="@+id/i_instagram"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/i_tiktok"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/tiktok_passive"
            app:layout_constraintLeft_toRightOf="@+id/i_twitter"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/i_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/i_instagramCopy"/>

        <EditText
            android:id="@+id/e_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/FragmentProfile_username"
            android:translationY="-3dp"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="@id/i_location"
            app:layout_constraintRight_toRightOf="@id/i_location"
            app:layout_constraintTop_toTopOf="@+id/i_location"
            app:layout_constraintBottom_toBottomOf="@+id/i_location"
            android:layout_marginHorizontal="50dp"
            android:maxLines="1"
            android:inputType="text"
            android:textSize="18sp"
            android:fontFamily="@font/josefin_sans_light"/>

        <ImageView
            android:id="@+id/i_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="-10dp"
            android:background="@drawable/searchloc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/e_location"/>

        <EditText
            android:id="@+id/e_todo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/FragmentProfile_findPeople"
            android:translationY="-13dp"
            android:elevation="1dp"
            android:inputType="text"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="@id/i_todo"
            app:layout_constraintRight_toRightOf="@id/i_todo"
            app:layout_constraintTop_toTopOf="@+id/i_todo"
            app:layout_constraintBottom_toBottomOf="@+id/i_todo"
            android:layout_marginHorizontal="50dp"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/josefin_sans_light" />

        <ImageView
            android:id="@+id/i_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/i_todo"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:translationY="-15dp"
            app:layout_constraintTop_toBottomOf="@+id/i_todo"
            android:src="@drawable/match"/>

        <RelativeLayout
            android:id="@+id/i_match2"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:translationY="-16dp"
            android:translationX="10dp"
            android:background="@drawable/match"
            app:layout_constraintTop_toBottomOf="@+id/e_todo"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/t_match2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FragmentProfile_match"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/i_alev2"
                android:textSize="18sp"
                android:textColor="@color/backgroundColor"/>

            <ImageView
                android:id="@+id/i_alev2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/alev"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/i_history"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:translationY="-16dp"
            android:translationX="-10dp"
            android:background="@drawable/history"
            app:layout_constraintTop_toBottomOf="@+id/e_todo"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/t_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/FragmentProfile_history"
                android:textColor="@color/PrimaryTextColor"
                android:textSize="18sp"
                android:translationX="-10dp" />

        </RelativeLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>